--- a/site/_data/social_links.yml
+++ b/site/_data/social_links.yml
@@ -4,6 +4,5 @@
 # Other icons can be found at https://ionicons.com/v4/
 social:
 - {icon: "Twitter", link: "https://twitter.com"}
-- {icon: "Github", link: "https://github.com"}
-- {icon: "Pinterest", link: "https://pinterest.com"}
-- {icon: "Youtube", link: "https://youtube.com"}
+- {icon: "Github", link: "https://github.com//Phues"}
+- {icon: "LinkedIn", link: "https://linkedin.com"}
