idk what im doing

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,4 +1,4 @@
-title: Vonge
+title: Portfolio
 
 plugins:
   - jekyll-bookshop
@@ -55,3 +55,6 @@ defaults:
 tag_page_dir: tag
 tag_page_layout: tag_page
 tag_permalink_style: /:title
+
+export BUNDLE_GEMFILE=site/Gemfile
+
