--- a/site/_data/social_links.yml
+++ b/site/_data/social_links.yml
@@ -3,6 +3,5 @@
 # Example of adding a new link to the footer - {icon: "ion-logo-facebook", link: "https://facebook.com"}
 # Other icons can be found at https://ionicons.com/v4/
 social:
-- {icon: "Twitter", link: "https://twitter.com"}
 - {icon: "Github", link: "https://github.com//Phues"}
-- {icon: "LinkedIn", link: "https://linkedin.com"}
+- {icon: "LinkedIn", link: "https://linkedin.com//in//yl-benyamina"}
