--- a/component-library/components/educations-section/educations-section.bookshop.yml
+++ b/component-library/components/educations-section/educations-section.bookshop.yml
@@ -2,7 +2,7 @@
 spec:
   structures:
     - content_blocks
-  label: Education
+  label: Educations
   description: Education Section with heading, a description and a list of educational experiences
   icon: school
   tags:
