--- a/site/_config.yml
+++ b/site/_config.yml
@@ -30,6 +30,8 @@ collections:
     output: false
   educations:
     output: false
+  experiences:
+    output: false
   posts:
     output: true
     permalink: /blog/:slug
