--- a/site/_data/social_links.yml
+++ b/site/_data/social_links.yml
@@ -5,3 +5,4 @@
 social:
 - {icon: "Github", link: "https://github.com//Phues"}
 - {icon: "LinkedIn", link: "https://linkedin.com//in//yl-benyamina"}
+- {icon: "school", link: "https://www.credly.com/users/yacine-benyamina"}
